Sidenav changes dinamically when login

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,5 +21,8 @@
         "surname": "Surname",
         "register": "Sign up",
         "alreadyRegistered": "Already registered?"
+    },
+    "login": {
+        "dont_have_account": "Don't have an account?"
     }
 }
