--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -21,5 +21,8 @@
         "surname": "Apellido",
         "register": "Registrar",
         "alreadyRegistered": "¿Ya estás registrado?"
+    },
+    "login": {
+        "dont_have_account": "¿No tienes una cuenta?"
     }
 }
