--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,5 +24,10 @@
     },
     "login": {
         "dont_have_account": "Don't have an account?"
+    },
+    "denied-access-page": {
+        "title": "Denied access",
+        "message-start": "You don't have permission to access",
+        "message-end": "on this server."
     }
 }
