--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,6 +32,7 @@
         "message-end": "on this server."
     },
     "teacher": {
-        "my_rubrics": "My rubrics"
+        "my_rubrics": "My rubrics",
+        "create_rubric": "Create rubric"
     }
 }
