Styles and colors of rubric form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,5 +41,8 @@
     "rubric": {
         "name": "Name",
         "description": "Description"
+    },
+    "competence": {
+        "select": "Select competences"
     }
 }
