--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -41,5 +41,8 @@
     "rubric": {
         "name": "Nombre",
         "description": "Descripción"
+    },
+    "competence": {
+        "select": "Selecciona competencias"
     }
 }
