Displaying rubric in matrix format

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,7 +40,8 @@
     },
     "rubric": {
         "name": "Name",
-        "description": "Description"
+        "description": "Description",
+        "assessment": "Rubric assessment"
     },
     "competence": {
         "select": "Select competences"
