--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -40,7 +40,8 @@
     },
     "rubric": {
         "name": "Nombre",
-        "description": "Descripción"
+        "description": "Descripción",
+        "assessment": "Evaluación de la rúbrica"
     },
     "competence": {
         "select": "Selecciona competencias"
