Retrieving students by course from Classroom

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,7 +38,8 @@
     "teacher": {
         "my_rubrics": "My rubrics",
         "create_rubric": "Create rubric",
-        "my_courses": "My courses"
+        "my_courses": "My courses",
+        "students": "Students"
     },
     "rubric": {
         "name": "Name",
