Added assess button in rubrics list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,7 +44,8 @@
     "rubric": {
         "name": "Name",
         "description": "Description",
-        "assessment": "Rubric assessment"
+        "assessment": "Rubric assessment",
+        "assess": "Assess"
     },
     "competence": {
         "select": "Select competences"
