Selecting course & student in assessment

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,5 +49,10 @@
     },
     "competence": {
         "select": "Select competences"
+    },
+    "assessment": {
+        "select_course": "Select course",
+        "select_activity": "Select activity",
+        "select_student": "Select student"
     }
 }
