--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -49,5 +49,10 @@
     },
     "competence": {
         "select": "Selecciona competencias"
+    },
+    "assessment": {
+        "select_course": "Selecciona curso",
+        "select_activity": "Seleciona actividad",
+        "select_student": "Selecciona alumno"
     }
 }
