Selecting levels in assessment, adding comments and styling

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -48,11 +48,13 @@
         "assess": "Assess"
     },
     "competence": {
+        "competence": "Competence",
         "select": "Select competences"
     },
     "assessment": {
         "select_course": "Select course",
         "select_activity": "Select activity",
-        "select_student": "Select student"
+        "select_student": "Select student",
+        "comments": "Comments"
     }
 }
