--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -48,11 +48,13 @@
         "assess": "Evaluar"
     },
     "competence": {
+        "competence": "Competencia",
         "select": "Selecciona competencias"
     },
     "assessment": {
         "select_course": "Selecciona curso",
         "select_activity": "Seleciona actividad",
-        "select_student": "Selecciona alumno"
+        "select_student": "Selecciona alumno",
+        "comments": "Commentarios"
     }
 }
