--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -55,6 +55,6 @@
         "select_course": "Selecciona curso",
         "select_activity": "Seleciona actividad",
         "select_student": "Selecciona alumno",
-        "comments": "Commentarios"
+        "comments": "Comentarios"
     }
 }
